--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 html, body {
-  height: 100%;
+  /* height: 100%; */
   margin: 0;
   display: flex;
   flex-direction: column;
