--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@ html {
 }
 
  body {
+  height: 100vh;
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -192,11 +193,15 @@ main {
 /* Container for the entire popup */
 .mapboxgl-map{
   .mapboxgl-popup{
-    max-width: 310px !important;
-    width: 310px !important;
+    max-width: 380px !important;
+    width: 380px !important;
   }
   .mapboxgl-popup-close-button{
     display: none !important;
+  }
+  .mapboxgl-popup-content{
+    background: transparent !important;
+    box-shadow: none !important;
   }
 }
 
